src/components/nav/styles.scss
@import "../../style/variables.scss";

.header {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 3;
	.logo {
		flex-basis: 100px;
		flex-grow: 0;
		flex-shrink: 0;
		a {
			background-color: #7f8c26;
			display: flex;
			border-radius: 20rem;
			background-size: cover;
			background-position: center;
			justify-content: center;
			align-content: center;
			width: 100px;
			padding-bottom: 100%;
			position: relative;
			span {
				visibility: hidden;
				position: absolute;
				z-index: 0;
			}
			img {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				object-fit: cover;
				z-index: 1;
			}
		}
	}
	
	.btn-toggle-nav {
		display: none;
	}

	nav {
		opacity: relative;
		z-index: 1;
		font-family: $font-title;
		> ul {
			margin: 0;
			padding: 0;
			list-style: none;
	    	> li {
	    		> a {
	    			&:hover {
	    				text-decoration: none;
	    			}
	    		}
	    		> span {
	    			cursor: pointer;
	    		}
	    		.dropdown-menu {
	    			ul {
		    			margin: 0;
				    	padding: 0;
				    	list-style: none;
				    }
	    		}
    		}
		}
	}
	&.sticky {
		position: fixed;
		&:before {
			opacity: 1;
		}
	}

	@media(max-width: $screen-sm-down){
		.mobile-logo {
			position: absolute;
			top: 15px;
			left: 50%;
			margin-left: -50px;
			background-color: #7f8c26;
			width: 100px;
			height: 100px;
			border-radius: 100px;
			background-size: contain;
			background-repeat: no-repeat;
			background-position: center;
		}
		.overlay-bg {
			position: fixed;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			background-color: #000;
			visibility: hidden;
			opacity: 0;
			transition: visibility .15s ease-in, opacity .15s ease-in;
			z-index: 0;
			&.is-active {
				opacity: .65;
				visibility: visible;
			}
		}
		nav {
		    position: fixed;
		    top: 0;
		    left: 0;
		    bottom: 0;
		    background: #000;
		    width: 80%;
		    transform: translateX(-100%);
		    transition: transform .25s ease-in;
		    z-index: 1;
		    > ul {
		    	padding: 0 2rem;
		    	display: flex;
		    	flex-direction: column;
		    	> li {
		    		> a,
		    		> span {
		    			display: inline-block;
		    			width: 100%;
		    			color: #fff;
		    			text-decoration: none;
			    		text-transform: uppercase;
			    		padding: 2rem 0;
			    		border-bottom: 1px solid #444;
			    		&:hover,
			    		&:active,
			    		&:focus {
			    			color: #84C340;
			    		}
		    		}
		    		.dropdown-menu {
		    			height: 0;
		    			overflow: hidden;
		    			transition: height .25s ease-in-out;
		    			> ul {
		    				padding-top: 2rem;
		    				> li {
		    					padding-left: 2rem;
		    					> a {
		    						display: inline-block;
		    						width: 100%;
		    						padding: 1.5rem 0;
		    						color: #fff;
		    						text-decoration: none;
		    					}
								&.logo {
									order: 0;
									width: 100px;
									align-self: center;
									> a {
										padding-top: 0;
									}
								}
		    				}
		    			}
		    		}
		    		&.logo {
		    			order: -1;
		    			max-width: 100px;
		    			padding: 15px 0;
		    			> a {
		    				padding: 0 0 100%;
		    			}
		    		}
		    		&:last-child {
		    			> a {
		    				border-bottom: 0;
		    			}
		    		}
		    	}
		    }
		}
		.btn-toggle-nav {
			display: flex;
			justify-content: center;
			align-items: center;
			position: absolute;
			top: 15px;
			right: 15px;
			width: 40px;
			height: 40px;
			padding: 3px;
			background: none;
			z-index: 1;
			cursor: pointer;
			color: #fff;
			border: 0;

			&:hover,
			&:focus {
				outline: 0;
			}
			&:active {
				background: rgba(0,0,0,.25);
			}
			&.is-active {
				color: #fff;
				+ nav {
					transform: translateX(0);
					overflow: auto;
					transition-timing-function: ease-out;
				}
			}
		}
	}

	@media(min-width: $screen-md-up){
		&:before {
			content: '';
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			z-index: 0;
			opacity: 0;
			background-color: #fff;
			transition: opacity .25s;
		}
		.mobile-logo {
			display: none;
		}
		.overlay-bg {
			display: none;
		}
		nav {
			flex-grow: 1;
			margin-left: 2rem;
	    > ul {
	    	
	    	display: flex;
    		justify-content: space-evenly;
    		align-items: center;
		    > li {
		    	position: relative;
		    	padding: 2rem;
		    	> a,
		    	> span {
		    		font-size: 1.4rem;
		    		display: inline-block;
		    		position: relative;
		    		color: rgba(255,255,255,.75);
		    		text-align: center;
		    		padding: 0;
		    		text-decoration: none;
		    		text-transform: uppercase;
		    		&::after {
						position: absolute;
						left: 50%;
						transform: translateX(-50%);
						content: '';
						width: 0;
						height: 1px;
						background-color: #fff;
						display: block;
						bottom: -1px;
						transition: width .25s ease-in-out;
		    		}
		    	}

		    	.dropdown-menu {
		    		position: absolute;
				    top: 100%;
				    left: -3rem;
				    width: 22rem;
				    background-color: #111;
				    color: #fff;
						visibility: hidden;
						opacity: 0;
						transform: translateY(20px);
						transition: all .25s ease-in-out;
						> ul {
							> li {
								display: inline-block;
								width: 100%;
								padding: 0 3rem;
						    > a {
						    	display: inline-block;
						    	width: 100%;
						    	color: #fff;
						    	font-size: 1.3rem;
						    	border-bottom: 1px solid #444;
						    	text-decoration: none;
						    	padding: 2rem 0;
						    	text-align: center;
						    	text-transform: capitalize;
						    	&:hover {
						    		color: #84C340;
						    		text-decoration: none;
						    	}
						    }
						    &:last-child {
						    	> a {
						    		border-bottom: 0;
						    	}
						    }
							}
						}
					}
					&.active,
	    			&:hover,
					&:focus {
						> a {
			    			&::after {
			    				width: 100%;
			    			}
		  				}
		  			}
		  			&:hover,
					&:focus {
						.dropdown-menu {
							transform: translateY(0);
							visibility: visible;
							opacity: 1;
						}
					}
		    	}
			}

		}
		&.sticky {
			box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.1);
			&:before {
				opacity: 1;
			}
			nav {
				> ul {
					> li {
						> a,
						> span {
							color: #000;
							&::after {
								background-color: $theme_main;
							}
						}
					}
				}
			}
		}
	}

	@media(min-width: $screen-lg-up){

	}

	@media(min-width: $screen-xl-up){
		
	}
}

